--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,16 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= render 'layouts/shim'%>
   </head>
 
   <body>
+  <%= render 'layouts/header' %>
+  <div class="container">
     <%= yield %>
+    <%= render 'layouts/footer'%>
+  </div>
   </body>
 </html>
